[package]
name = "lunir-lex-lua50-lua51"
version = "0.3.0"
edition = "2021"
description = "A lexer for Lua 5.0 and Lua 5.1."
license = "MIT OR Apache-2.0"
repository = "https://github.com/lunir-project/lunir-lex-lua50-lua51"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
lifering = "0.4.0"

[dev-dependencies]
itertools = "0.10.5"
